fixed mobile overflow; added useScroll hook

--- a/src/components/DisplayCards/DisplayCards.module.css
+++ b/src/components/DisplayCards/DisplayCards.module.css
@@ -61,11 +61,12 @@
 
 .readMe {
   overflow: auto;
+  overscroll-behavior: contain;
   position: relative;
   padding: 1em;
   background-color: var(--darkThemeColor);
   height: 133%;
-  width: 120%;
+  width: 100%;
   transform: translate(-8%, -25%);
   border: var(--darkThemeColor);
   box-shadow: inset 0 0 5px var(--lightThemeColor);
