--- a/src/components/FlipCard/FlipCard.module.css
+++ b/src/components/FlipCard/FlipCard.module.css
@@ -5,6 +5,8 @@
 
 .flipcardFront,
 .flipcardBack {
+  transform-style: preserve-3d;
+  perspective: inherit;
   transition: transform 1s;
   height: var(--slide-containers);
   position: absolute;
